# JaxMARL

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  build.sh  compose.yaml  crazyvis.py  docker_run.sh  env_commands  fast_attention.py  hanabi_run.sh  introduction.py  jaxmarl_mpe_sweep.yaml  jaxmarl_smax_sweep.yaml  mava_smax_sweep.yaml  mkdocs.yml  mpe_correspondance.py  mpe_transfer.py  multi_quad_env.py  plot_test.ipynb  pyproject.toml  pytest.ini  run.sh  run_agent.sh  run_multiquad_random_video.py  setup.py  start_wandb_sweep.py  startagents.sh  sweep_hanabi.yaml  sweep_mabrax.yaml  sweep_smax.yaml  test_policy.py  test_policy_single.py  (+6 more)
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-tests.yml  docs.yml  python-publish.yml  tests.yml
PAPER/: AnonymousSubmission2027.tex  CameraReady2027.tex  INSTRUCTIONS.tex  ReproducibilityChecklist.tex  aaai2027.bib  aaai2027.bst  aaai2027.sty
PAPER/Word/: AnonymousSubmission2027.docx  CameraReady2027.docx  ReproducibilityChecklist.docx
baselines/: buffer.py  hyper_param.py  hyperparam_search.py  run_minimal_baseline_set.py  run_minimal_baseline_set.yaml
baselines/IPPO/: README.md  benchmarking.ipynb  br-facmac-multi.py  br-facmac.py  cooperation-multi.py  cooperation.py  facmac.py  hardcoded_facmac.py  ippo_cnn_overcooked.py  ippo_cont_homogenous.py  ippo_ff_hanabi.py  ippo_ff_hint_guess.py  ippo_ff_investment.py  ippo_ff_mabrax.py  ippo_ff_mabrax_old.py  ippo_ff_mpe.py  ippo_ff_mpe_facmac.py  ippo_ff_overcooked.py  ippo_ff_switch_riddle.py  ippo_ff_tag.py  ippo_homogenous.py  ippo_mabrax.py  ippo_mamujoco.py  ippo_mlp.py  ippo_mlp_hanabi.py  ippo_mpe.py  ippo_mpe_facmac.py  ippo_overcooked.py  ippo_rnn.py  ippo_rnn_hanabi.py  ippo_rnn_mpe.py  ippo_rnn_overcooked_v2.py  ippo_rnn_smax.py  ippo_rnn_smax_split_networks.py  ippo_switch_riddle.py  ippo_transf_hanabi.py  oldfacmac.py  overcooked.py  population-br-facmac.py  ppo.py  (+4 more)
baselines/MAPPO/: README.md  mappo_Vtransformer_utracking.py  mappo_ff_hanabi.py  mappo_ff_mabrax.py  mappo_rnn.py  mappo_rnn_hanabi.py  mappo_rnn_mpe.py  mappo_rnn_smax.py  mappo_rnn_utracking.py  mappo_transf_utracking.py  mappo_transformer_utracking.py
baselines/QLearning/: README.md  fast_attention.py  hp_tuning.py  hyper.py  iql.py  iql_cnn_overcooked.py  iql_ff_overcooked.py  iql_ns.py  iql_ps.py  iql_ps_pretrained.py  iql_rnn.py  pqn_vdn_cnn.py  pqn_vdn_cnn_overcooked.py  pqn_vdn_ff.py  pqn_vdn_rnn.py  ql_ff.py  qmix.py  qmix_ns.py  qmix_pretrained.py  qmix_ps.py  qmix_ps_pretrained.py  qmix_rnn.py  qmix_rnn_fancy.py  qmix_transf_agent.py  requirements.txt  shaq.py  transf_hp_tuning.py  transf_qmix.py  transf_qmix_batch_norm_.py  transf_qmix_mpe.py  transf_qmix_refactor.py  utils.py  vdn.py  vdn_cnn_overcooked.py  vdn_ff.py  vdn_minibatch.py  vdn_multiupdate.py  vdn_ns.py  vdn_p.py  vdn_p_exp_target.py  (+6 more)
baselines/config/: ippo_ff_hanabi.yaml  ippo_mabrax.yaml  ippo_mpe.yaml  ippo_rnn_hanabi.yaml  ippo_rnn_mpe.yaml  ippo_rnn_smax.yaml  ippo_switch_riddle.yaml  iql.yaml  iql_ns.yaml  iql_ps.yaml  qmix.yaml  qmix_pretrained.yaml  sweep_ippo_rnn_mpe.yaml  vdn.yaml  vdn_ps.yaml  vdn_ps_pretrained.yaml
coin/: coin.py  initial_tests.py  jaxmarl_coin_evalutator.py
coin/configs/: coin.yaml
docs/: CNAME  Installation.md  index.md  multi_agent_env.md
docs/Algorithms/: PPO.md  QLearning.md
docs/Environments/: coin_game.md  hanabi.md  jaxnav.md  mabrax.md  mpe.md  overcooked.md  robotarium.md  smax.md  storm.md  switch_riddle.md
exports/: custom_layout.txt
jaxmarl/: __init__.py  _version.py  registration.py
jaxmarl/environments/: __init__.py  multi_agent_env.py  spaces.py
jaxmarl/gridworld/: README.md  common.py  env.py  grid_viz.py  interactive.py  ma_maze.py  maze.py  tabular_q.py
jaxmarl/tools/: README_LEVEL_EDITOR.md  layout_editor_v3.py
jaxmarl/tutorials/: JaxMARL_Walkthrough.ipynb  matrix_games_in_the_grid_introduction.py  mg_in_the_grid_2p_introduction.py  mpe_introduction.py  overcooked_introduction.py  smax_introduction.py  storm_2p_introduction.py  storm_introduction.py  storm_np_introduction.py
jaxmarl/viz/: grid_rendering_v2.py  overcooked_v2_visualizer.py  overcooked_v3_visualizer.py  overcooked_visualizer.py  smax_visualizer.py  utracking_visualizer.py  visualizer.py  window.py
jaxmarl/wrappers/: baselines.py  gymnax.py  transformers.py
mujoco/: two_quad_payload.xml
multiagentgymnax/: __init__.py  multi_agent_env.py  registration.py
multiagentgymnax/MPE/: mpe_base_env.py
multiagentgymnax/environments/: __init__.py  multi_agent_env.py  spaces.py
multiagentgymnax/gridworld/: README.md  common.py  env.py  grid_viz.py  interactive.py  ma_common.py  ma_goal_cycle.py  maze.py
multiagentgymnax/mpe/: __init__.py  mpe_base_env.py  mpe_simple_world_comm.py  simple_tag.py  simple_world_comm.py  tests2.py  train_utils.py  zoo_benchmark.py  zoo_tests.py
multiagentgymnax/viz/: visualizer.py
multiagentgymnax/wrappers/: smaxbaselines.py
play_scripts/: play_overcooked_v3.py
requirements/: requirements-dev.txt  requirements-qlearning.txt  requirements.txt
scripts/: create_mutagen_sync.sh
site/: 404.html  index.html  objects.inv  sitemap.xml
site/Installation/: index.html
site/search/: search_index.json
smax/: __init__.py  registration.py
smax/environments/: __init__.py  multi_agent_env.py  multi_agent_env_async.py  spaces.py
smax/gridworld/: common.py  grid_viz.py  interactive.py  layouts.py  ma_maze.py  maze.py  overcooked.py  overcooked_viz.py  tabular_q.py
smax/tutorials/: matrix_games_in_the_grid_introduction.py  mg_in_the_grid_2p_introduction.py  mini_smac_introduction.py  mpe_introduction.py  overcooked_introduction.py  smax_introduction.py
smax/viz/: grid_rendering.py  overcooked_visualizer.py  (+2 more)
sweeps/: ippo_full_sweep.py  ippo_full_sweep.yaml  noise_sweep.py
tests/: test_envs_implement_base_api.py  test_jaxmarl_api.py
(+417 files in other folders)
