
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['jaxmarl*']

[tool.setuptools.dynamic]
version = {attr = "jaxmarl.__version__"}

[project]
name = "jaxmarl"
readme = "README.md"
description = "Multi-Agent Reinforcement Learning with JAX"
authors = [
    {name = "Foerster Lab for AI Research", email = "arutherford@robots.ox.ac.uk"},
  ]
dynamic = ["version"]
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "jax<=0.4.38",
  "jaxlib",
  "flax",
  "safetensors",
  "chex",
  "brax==0.10.3",
  "mujoco==3.1.3",
  "matplotlib",
  "pillow",
  "scipy<=1.12",
  "gymnax",
]

[project.optional-dependencies]
algs = [
  "optax",
  "distrax",
  "flashbax==0.1.0",
  "wandb",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "pettingzoo>=1.24.3",
  "tqdm>=4.66.0",
]
dev = [
  "pytest",
  "pygame",
]

[project.urls]
"Homepage" = "https://github.com/FLAIROx/JaxMARL"
"Bug Tracker" = "https://github.com/FLAIROx/JaxMARL/issues"
