
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['jaxmarl*']

[tool.setuptools.dynamic]
version = {attr = "jaxmarl.__version__"}

[project]
name = "jaxmarl"
readme = "README.md"
description = "Multi-Agent Reinforcement Learning with JAX"
authors = [
    {name = "Foerster Lab for AI Research", email = "arutherford@robots.ox.ac.uk"},
  ]
dynamic = ["version"]
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "jax>=0.4.25",
  "numpy>=1.26",
  "flax",
  "safetensors",
  "chex",
  "brax>=0.10.3",   
  "matplotlib",
  "pillow",
  "jaxtyping>=0.2.28",
  "gymnax",
]


[project.optional-dependencies]
algs = [
  "optax",
  "distrax",
  "flashbax>=0.1.0",
  "wandb",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "tqdm>=4.66.0",
]
dev = [
  "pytest",
  "pytest-xdist",
  "pygame",
  "mpe2",
  "ruff",
  "pyright",
  "pre-commit",
]

[project.urls]
"Homepage" = "https://github.com/FLAIROx/JaxMARL"
"Bug Tracker" = "https://github.com/FLAIROx/JaxMARL/issues"

[tool.pyright]
include = [
  "jaxmarl/environments/multi_agent_env.py",
  "jaxmarl/environments/spaces.py",
  "jaxmarl/wrappers/baselines.py",
]
typeCheckingMode = "basic"
pythonVersion = "3.11"
reportMissingImports = false
reportMissingModuleSource = false

[tool.pytest.ini_options]
addopts = "-n auto --dist=loadfile"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, isort
ignore = ["E501"]           # line length checked separately

[tool.ruff.lint.per-file-ignores]
"baselines/**" = ["E402"]  # baselines use top-level sys.path manipulation
