
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['jaxmarl*']

[tool.setuptools.dynamic]
version = {attr = "jaxmarl.__version__"}

[project]
name = "jaxmarl"
readme = "README.md"
description = "Multi-Agent Reinforcement Learning with JAX"
authors = [
    {name = "Foerster Lab for AI Research", email = "arutherford@robots.ox.ac.uk"},
  ]
dynamic = ["version"]
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "jax>=0.4.25",
  "numpy>=1.26",
  "flax",
  "safetensors",
  "chex",
  "brax>=0.10.3",
  "matplotlib",
  "pillow",
  "jaxtyping>=0.2.28",
  "gymnax",
]


[project.optional-dependencies]
algs = [
  "optax",
  "distrax",
  "flashbax>=0.1.0",
  "wandb",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "tqdm>=4.66.0",
]
dev = [
  "pytest",
  "mpe2",
  "ruff",
  "pyright",
  "pre-commit",
]

[project.urls]
"Homepage" = "https://github.com/FLAIROx/JaxMARL"
"Bug Tracker" = "https://github.com/FLAIROx/JaxMARL/issues"

[tool.pyright]
include = [
  "jaxmarl/environments/multi_agent_env.py",
  "jaxmarl/environments/spaces.py",
  "jaxmarl/wrappers/baselines.py",
]
typeCheckingMode = "basic"
pythonVersion = "3.11"
reportMissingImports = false
reportMissingModuleSource = false
reportCallIssue = false
reportAttributeAccessIssue = false
reportIndexIssue = false

[tool.pytest.ini_options]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["build/", ".cache/"]

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, isort
ignore = ["E501", "F722"]   # E501: line length; F722: jaxtyping scalar annotations ("") are valid but unparseable by ruff

[tool.ruff.lint.per-file-ignores]
# baselines: research/experiment scripts with relaxed style requirements
"baselines/**" = ["E402", "E711", "E731", "E741", "F401", "F811", "F841"]
# tests: use star imports from jaxmarl
"tests/**" = ["F401", "F403", "F405", "F841"]
# older environment implementations not yet updated to 2.0 style
"jaxmarl/environments/**" = ["E722", "E731", "E741", "F401", "F403", "F405", "F811", "F821", "F841"]
"jaxmarl/gridworld/**" = ["E722", "E731", "E741", "F401", "F403", "F405", "F811", "F821", "F841"]
"jaxmarl/viz/**" = ["E722", "F401", "F821", "F841"]
